<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="60dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@android:color/background_light"
        android:textSize="60sp"/>

    <Button
        android:id="@+id/button_cloud_storage_main_activity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:drawableLeft="@drawable/ic_cloud_circle_green"
        android:drawablePadding="20dp"
        android:drawableStart="@drawable/ic_cloud_circle_green"
        android:gravity="start|center_vertical|center_horizontal"
        android:onClick="startCloudStorageLoginActivity"
        android:text="@string/cloud_name"
        android:textAllCaps="false"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_wifi_direct_main_activity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:drawableLeft="@drawable/ic_wifi_green"
        android:drawablePadding="35dp"
        android:drawableStart="@drawable/ic_wifi_green"
        android:gravity="start|center_vertical"
        android:onClick="startWifiDirectLoginActivity"
        android:text="@string/wifi_direct_name"
        android:textAllCaps="false"
        android:textSize="30sp"/>


</LinearLayout>