<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context=".activities.AddAlbumActivity">


    <EditText
        android:id="@+id/name_of_album"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/prompt_name_of_the_album"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorLink="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/add_album_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/user_list_name"
        android:textStyle="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/user_list_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_of_album"/>

    <ImageView
        android:id="@+id/add_user_button"
        style="?android:textAppearanceSmall"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/add_user"
        android:onClick="startAddUserActivity"
        app:layout_constraintBottom_toTopOf="@+id/user_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_person_add_green_24dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/user_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:background="@drawable/user_list_back"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_list_name"
        app:layout_constraintVertical_bias="0.012"/>

    <Button
        android:id="@+id/add_album_button"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/add_album_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_of_album"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>